still buggy but better

--- a/GymAPP/Todo
+++ b/GymAPP/Todo
@@ -1,5 +1,4 @@
-- Better Visuals
-- Splitting up largeer code blocks into smaller ones! 
+- Better Visuals?
 - Login system and personal tracking 
 - Makeing the "usage" better ie the actual using of a trainingsplan (ie automatic weight setting perfect progression trakcing making sense making it look good etc!)
 - In new trainingsplan creator add week repeating or for two week stuff A B A B etc
